--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <%= render 'layouts/flash_tasks' %>
+      <%= render 'layouts/flash_messages' %>
       <%= yield %>
     </div>
   </body>
