--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,11 @@
 
 <ul>
   <% @tasks.each do |task| %>
+  
+  <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
+  
   <% end %>
 </ul>
+
 
 <%= link_to '新規タスクの投稿', new_task_path %>
