--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
+  <div class="col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
 
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
@@ -7,25 +7,25 @@
       <ul>
         <% task.errors.full_messages.each do |task| %>
         <li><%= task %></li>
-        <% end %>
+  <% end %>
       </ul>
     </div>
-  <% end %>
+<% end %>
   
   <div class="form-group">
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status, class: 'form-control'%>
+    <%= f.label :status, 'ステータス' %>
+    <%= f.text_field :status, class: 'form-control'%>
   </div>
   
   <div class="form-group">
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content, class: 'form-control' %>
+    <%= f.label :content, 'タスク' %>
+    <%= f.text_field :content, class: 'form-control' %>
   </div>
   
   
   <%= f.submit '投稿', class: 'btn btn-primary' %>
 
-<% end %>
+  <% end %>
 
   </div>
 </div>
