--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,29 @@
 <h1>タスク一覧</h1>
 
-<ul>
-  <% @tasks.each do |task| %>
-  
-  <li><%= link_to task.id, task %> : <%= task.status %> &gt; <%= task.content %></li>
-  
-  <% end %>
-</ul>
 
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <%= form_for(@task) do |f| %>
+        <div class="form-group">
+          <%= f.label :content, 'task' %>
+          <%= f.text_area :content, class: 'form-control', rows: 5 %>
+        </div>
+        <div class="form-group">
+          <%= f.label :status, 'status' %>
+          <%= f.text_area :status, class: 'form-control', rows: 5 %>
+        </div>
+        <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
+      <% end %>
+    </aside>
+    <div class="col-xs-8">
+      <%= render 'tasks/tasks', tasks: @tasks %>
+    </div>
+  </div>
+<% else %>
+  <div>
+    <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+  </div>
+  
+<% end %>
 
-<%= link_to '新規タスクの投稿', new_task_path %>
